# apollo

./: .clauderc  .editorconfig  .gitignore  .pre-commit-config.yaml  APOLLO-CPA-Summary.md  COMMIT_MSG.txt  DEPLOYMENT_COMPLETE.md  LICENSE  README.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
.atlas-dev/: context.md  learning-log.md  syllabus.md  teaching-workflow.md
.github/: copilot-instructions.md
.github/instructions/: module-2.instructions.md
.specify/: KNOWLEDGE-STATE.md
.specify/specs/module-2-ai-agents/: plan.md  progress.md  spec.md
app/: main.py
app/auth/: password.py
app/db/: supabase_client.py
app/models/: task.py  user.py
backend/: .env.example  .gitignore  cleanup_test_data.sh  render.yaml  requirements.txt  test_agent.py  test_auth.sh  test_milestone_creation.sh
backend/app/: main.py
backend/app/agents/: README.md  __init__.py  base.py  context.py  db.py  helpers.py  life_coordinator.py  test_agent.py  test_context.py  token_utils.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/db/: supabase_client.py
backend/docs/: CATEGORY_COLORS.md  MILESTONE_FIX.md  MILESTONE_FIX_COMPLETE.md
backend/scripts/: clean_import.py  fix_duplicates.py  import_all_transactions.py  migrate_finance_data.py  module-2-2-schema.sql  recategorize_transactions.py  seed_categories.py  set_balances.py  test_finance_api.sh
backend/sql/: goals_milestones.sql
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/lib/: api.ts  auth.ts
frontend/types/: index.ts
(+41 files in other folders)
